# ai-agents

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  CONTRIBUTING.md  COWORK.md  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 064d0e836915_unit_grouping_departments_and_teams_adr_.py  0f9898942202_add_unit_entity_and_goal_unit_id.py  11d018484810_add_kpi_link_cycle_table.py  20cd74dc490c_add_goal_parent_id.py  338ffd927507_add_kpi_factor_table.py  6531ddb496d2_add_kpi_link_table.py  83ee12f111f6_initial_schema.py  96083dc962bc_add_goal_table.py  a205b73f05ad_add_goal_deadline_importance_urgency.py  febf4b29d074_add_kpi_entity_drop_goal_kpis_json.py
backend/app/: config.py  main.py
backend/app/board/: __init__.py  personas.py
backend/app/db/: session.py  types.py
backend/app/llm/: anthropic_provider.py  factory.py  provider.py  stub_provider.py
backend/app/models/: board_opinion.py  decision.py  entity.py  goal.py  kpi.py  kpi_factor.py  kpi_link.py  kpi_link_cycle.py  scenario.py  status_log.py  unit.py  unit_group.py
backend/app/scenarios/: __init__.py
backend/app/schemas/: board.py  decision.py  goal.py  kpi.py  kpi_factor.py  kpi_link.py  kpi_link_cycle.py  unit.py  unit_group.py
backend/app/services/: board_service.py  decision_service.py  goal_service.py  kpi_factor_service.py  kpi_link_service.py  kpi_service.py  unit_group_service.py  unit_service.py
backend/scripts/: __init__.py  seed_demo_goals.py
backend/tests/: fakes.py
backend/tests/integration/: conftest.py  (+8 more)
(+199 files in other folders)
