[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-center"
version = "0.1.0"
description = "AI-assisted business decision tool (Decision Center vertical slice)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "anthropic>=0.39",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "httpx>=0.27",
  "ruff>=0.7",
  "mypy>=1.13",
  "pre-commit>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
# dev-скрипты проверяются тем же mypy без ослаблений; запуск без аргументов
# (`python -m mypy`) покрывает и app, и scripts. Канонический вызов `mypy app`
# скрипты не видит — для них: `python -m mypy scripts` или просто `python -m mypy`.
files = ["app", "scripts"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
